These are the release notes for the Contest extension.
	
Extension page on mediawiki.org: https://www.mediawiki.org/wiki/Extension:Contest
Latest version of the release notes: http://svn.wikimedia.org/viewvc/mediawiki/trunk/extensions/Contest/RELEASE-NOTES?view=co


=== Version 0.1 ===
2011-xx-xx

Initial release with these features:

* 