@@ -5,8 +5,13 @@ Latest version of the release notes: http://svn.wikimedia.org/viewvc/mediawiki/t
 
 
 === Version 0.1 ===
-2011-xx-xx
+2011-10-xx
 
 Initial release with these features:
 
-* 
+* Admin interface for managing contests and their challenges.
+* Landing and signup pages for each contest.
+* Personal contest list and submission interface for each user.
+* Summary pages per contest listing contestants, which can be filtered and sorted.
+* Judging interface that allows for rating and commenting on each participant.
+* All contests, challenges, contestants, comments and votes can be queried and exported via the API.
